most of logic done
